added full player attributes

--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -549,7 +549,7 @@ function renderPlayerCard(player, rankIndex) {
         </div>
 
         ${miniProjHtml ? `<div class="mt-2 text-xs text-gray-400">Projections:<br>${miniProjHtml}</div>` : ''}
-        <div class="mt-2 text-xs text-gray-500">Click for full FC26 attributes & projections</div>
+        <div class="mt-2 text-xs text-gray-500">Click for full MomentumScout Player Attributes</div>
       </div>
     </div>
   `;
