Initial commit - MomentumAI Frontend ready for Render

--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -113,6 +113,7 @@ const dynMetrics = document.getElementById('dynamicMetrics');
 const weightContainer = document.getElementById('weightingSliders');
 const findBtn = document.getElementById('findPlayersBtn');
 const resetBtn = document.getElementById('resetBtn');
+resetBtn.addEventListener('click', resetAll);
 const recommendations = document.getElementById('recommendations');
 const loadingIndicator = document.getElementById('loadingIndicator');
 const searchBtn = document.getElementById('searchPlayerBtn');
